[gd_scene load_steps=11 format=3 uid="uid://b6t7gm28eatmt"]

[ext_resource type="Theme" uid="uid://cym6n88rrqd2k" path="res://resources/Font/mainfont.tres" id="1_ytmex"]
[ext_resource type="Script" path="res://UI/mapsmenu.gd" id="2_3kay5"]
[ext_resource type="StyleBox" uid="uid://ixabtdacvopu" path="res://resources/main_boxstyle.tres" id="2_xceqx"]
[ext_resource type="AudioStream" uid="uid://c1i5fuqsti5cp" path="res://Sound effects/RetryPunk.wav" id="4_oihuh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fm61a"]
bg_color = Color(0.0509804, 0.027451, 0.105882, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.392157, 0.360784, 0.560784, 1)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_g3vhk"]
font_size = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxvb8"]
content_margin_left = 60.0
content_margin_top = 20.0
content_margin_right = 60.0
content_margin_bottom = 20.0
bg_color = Color(0.152941, 0.196078, 0.254902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.0235294, 0.0823529, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1kh6"]
content_margin_left = 60.0
content_margin_top = 20.0
content_margin_right = 60.0
content_margin_bottom = 20.0
bg_color = Color(0.152941, 0.196078, 0.254902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.0235294, 0.0823529, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7n5j"]
content_margin_left = 60.0
content_margin_top = 20.0
content_margin_right = 60.0
content_margin_bottom = 20.0
bg_color = Color(0.152941, 0.196078, 0.254902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.0235294, 0.0823529, 1)
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b1k6u"]
content_margin_left = 50.0
content_margin_top = 20.0
content_margin_right = 50.0
content_margin_bottom = 20.0

[node name="mapsmenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ytmex")
script = ExtResource("2_3kay5")

[node name="Main_PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fm61a")

[node name="MarginContainer" type="MarginContainer" parent="Main_PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="title_PanelContainer" type="PanelContainer" parent="Main_PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("2_xceqx")

[node name="MarginContainer" type="MarginContainer" parent="Main_PanelContainer/MarginContainer/title_PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Main_PanelContainer/MarginContainer/title_PanelContainer/MarginContainer"]
layout_mode = 2
text = "Select map
"
label_settings = SubResource("LabelSettings_g3vhk")

[node name="Maps_PanelContainer" type="PanelContainer" parent="Main_PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Main_PanelContainer/MarginContainer/Maps_PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Main_PanelContainer/MarginContainer/Maps_PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Mapa1" type="Button" parent="Main_PanelContainer/MarginContainer/Maps_PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_hxvb8")
text = "Map 1"

[node name="Mapa2" type="Button" parent="Main_PanelContainer/MarginContainer/Maps_PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_a1kh6")
text = "Map 2"

[node name="Mapa3" type="Button" parent="Main_PanelContainer/MarginContainer/Maps_PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_y7n5j")
text = "Map 3"

[node name="title_PanelContainer2" type="PanelContainer" parent="Main_PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("2_xceqx")

[node name="Back" type="Button" parent="Main_PanelContainer/MarginContainer/title_PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_b1k6u")
text = "Return"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oihuh")
volume_db = -25.0
bus = &"filter"
